# Terminal

./: .coverage  .directory  .gitignore  .pre-commit-config.yaml  Demo.py  LICENSE  README.md  README.md.save  ReadMe.txt  demo.py  install  pyproject.toml  setup.cfg  test_terminal.py  tox.ini
html/inputmanager/: index.html  inputmanager.html
html/terminal/: index.html  terminal.html
src/inputmanager/: __init__.py  inputmanager.py
src/terminal/: __init__.py  terminal.py
terminal/: __init__.py  terminal.py
tests/: test_terminal.py
